# StringCalculator

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt  sampleCommands.txt
apps/: CMakeLists.txt  app.cpp
cmake/: CompilerWarnings.cmake  ExecuteConanInstall.cmake  ExecutePVSAnalyzer.cmake  FindPVSExecutable.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake
docs/: CMakeLists.txt  mainpage.md
include/: stringcalculator.hpp
src/: CMakeLists.txt  stringcalculator.cpp
test/: CMakeLists.txt  StringCalculatorTester.cpp
